# simdtag_dev

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
assets/yacclab/test/: files.txt  readme.txt
benchmark/: apriltag_bench.cpp  apriltag_helper.h  ccl.cpp  disjoint_set.cpp  fit_quads_bench.cpp  gradient_clusters_bench.cpp  gradient_clusters_perf.cpp  scratchpad_bench.cpp  threshold.cpp  threshold_bench.cpp
benchmark/ccl/: bmrs.cpp  disjoint_set.cpp
cmake/: Halide.cmake
include/apriltag/: atomic_stack.h  highway_utils.h  memory_pool.h  packed_binary_image.h  vision_utils.h
include/simdtag/: atomic_stack.h  highway_utils.h  memory_pool.h  packed_binary_image.h  vision_utils.h
include/yacclab/: bmrs.h  labeling_bolelli_2019_forest.inc.h  labeling_bolelli_2019_forest_black.inc.h  labeling_bolelli_2019_forest_sl_black.inc.h  labels_solver.h  memory_tester.h
script/: flamegraph.sh  sort_pt.ipynb
src/: fit_quads.h  gradient_clusters.h  gradient_point.h  threshold.h
src/ccl/: bit_scan_forward.h  bmrs.cpp  bmrs.h  disjoint_set.cpp  disjoint_set.h
src/halide/: bm_only_halide_gradient_clusters.h  halide_gradient_clusters.cpp  halide_threshold.cpp
test/: binary_image_test.cpp  bmrs_test.cpp  bmrs_yacclab_test.cpp  ccl_sample_test.cpp  ccl_samples.cpp  ccl_samples.h  ccl_samples_test.h  disjoint_set.cpp  disjoint_set_test.cpp  fit_quads_test.cpp  gradient_clusters_test.cpp  gradient_point_test.cpp  highway_utils_test.cpp  spaghetti_yacclab_test.cpp
